--- a/src/app/modules/wallet/v2/settings-btc/settings-btc.component.html
+++ b/src/app/modules/wallet/v2/settings-btc/settings-btc.component.html
@@ -31,7 +31,11 @@
             <div class="m-walletForm__row--label">
               <label for="addressInput" i18n>Bitcoin Address</label>
               <m-tooltip icon="help">
-                <ng-container i18n>Placeholder</ng-container>
+                <ng-container i18n
+                  >Enter the public address from your own Bitcoin wallet which
+                  will be used to receive Bitcoin payments on Minds. Minds does
+                  not store your Bitcoin.</ng-container
+                >
               </m-tooltip>
             </div>
             <div
