--- a/src/app/modules/wallet/v2/settings-cash/settings-cash.component.scss
+++ b/src/app/modules/wallet/v2/settings-cash/settings-cash.component.scss
@@ -1,13 +1,19 @@
 // additional shared styles located in dashboard.component.scss
 m-walletSettings--cash {
-  .m-walletSettingsView--accountSplash {
+  .m-walletSettings {
+    h4 {
+      margin-bottom: 15px;
+    }
+  }
+
+  .m-walletSettingsView--hasAccount__detailsWrapper {
+    max-width: 460px;
+    margin: 38px 0 59px 0;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
-    margin: 38px 0 59px 0;
-    max-width: 460px;
   }
-  .m-walletSettingsView--accountSplash__bankPreviewWrapper {
+  .m-walletSettingsView--hasAccount__bankWrapper {
     display: flex;
     flex-flow: row nowrap;
     justify-content: flex-start;
@@ -17,14 +23,14 @@ m-walletSettings--cash {
       margin-right: 8px;
     }
   }
-  .m-walletSettingsView--accountSplash__linkContainer {
+  .m-walletSettingsView--hasAccount__linksContainer {
     display: flex;
     flex-flow: row nowrap;
-    justify-content: space-between;
+    justify-content: flex-start;
     flex: 1 0 auto;
     max-width: 146px;
     a:last-child {
-      margin-left: 8px;
+      margin-left: 28px;
     }
   }
 
@@ -33,18 +39,14 @@ m-walletSettings--cash {
     margin-bottom: 19px;
   }
 
-  .m-walletForm__nameFieldsContainer {
-    display: flex;
-    box-sizing: border-box;
-
-    [class*='m-walletForm__field'] {
-      flex: 1 0 50%;
-      &:first-child {
-        margin-right: 19px;
-      }
-    }
-  }
   .m-tooltip--bubble {
     right: 12px;
+  }
+
+  // TOS checkbox
+  m-walletCashOnboarding {
+    .m-walletForm__field--checkbox {
+      margin-top: 100px;
+    }
   }
 }
