uncomment fake data. this is unlikely to be functional

--- a/src/app/modules/wallet/v2/settings-cash/cash-onboarding-extras/cash-onboarding-extras.component.html
+++ b/src/app/modules/wallet/v2/settings-cash/cash-onboarding-extras/cash-onboarding-extras.component.html
@@ -1,5 +1,5 @@
 <div class="m-walletOnboardingExtrasForm" *ngIf="account">
-  <!-- TODOOJM sketchy *ngIf for pending notice. -->
+  <!-- TODOOJM sketchy *ngIf for pending notice -->
   <!-- <p *ngIf="!account.verified">
     Your account is pending verification. Verification status updates will be
     sent in your notifications.
